--- a/back-end/phyrosite/phyrosite/templates/base_phyro.html
+++ b/back-end/phyrosite/phyrosite/templates/base_phyro.html
@@ -4,11 +4,16 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Phyro Server Agencia de Desarrollo Web Tehuacán{%endblock title%}</title>
+    <title>{% block title %}{%endblock title%}</title>
 
     <link rel="canonical" href="{% block rel_canonical%}{% endblock rel_canonical%}" />
+    <!--  propuesta Chuko
     <meta name="description" content="{% block descripcion %}{% endblock descripcion %}" >
     <meta name="keywords" content="{% block keywords %}{% endblock keywords %}">
+    -->
+    <!-- propuesta Chano -->
+    <meta name="description" content="{{meta_descripcion}}" >
+    <meta name="keywords" content="{{meta_keywords}}">
     <meta property="fb:app_id" content="{%block fb_app_id%}504922086287468{% endblock fb_app_id%}" />
     <meta property="og:type" content="{%block og_type%}website{%endblock og_type%}" /> 
     <meta property="og:title" content="{% block og_title %}Phyro Server Tehuacán{% endblock og_title %}">
@@ -40,12 +45,10 @@
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="msapplication-TileImage" content="{{STATIC_URL}}img/icons/mstile-144x144.png">
     <meta name="msapplication-config" content="{{STATIC_URL}}img/icons/browserconfig.xml">
-
-
     <link rel="author" href="{%block rel_author%}{%endblock rel_author%}" />
-
     <link rel="author" href="/humans.txt" />
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+    {%block head_scripts%}{%endblock head_scripts%}
   </head>
   <body>
 
@@ -61,7 +64,7 @@
     </script>
     <script src="{{STATIC_URL}}js/codigo.js"></script>
     <!-- mas Javascript despues de inicializar-->
-    {%block morejs%} {%endblock morejs%}
+    {%block body_scripts%} {%endblock body_scripts%}
     <!-- Google Analytics Here-->
     {% block analytics%}{% endblock analytics%}
   </body>
