experimento con menu

--- a/back-end/phyrosite/phyrosite/templates/base_variables.html
+++ b/back-end/phyrosite/phyrosite/templates/base_variables.html
@@ -1,5 +1,5 @@
 {% extends "base_phyro.html" %}
-{% block title %}Phyro Server Agencia de Desarrollo Web Tehuacán{%if meta_titulo%}--{{meta_titulo}}{%endif%}{%endblock title%}
+{% block title %}Phyro Server{%if meta_titulo%} - {{meta_titulo}}{%endif%}{%endblock title%}
 
 {%block rel_author%}phyroserver.com{%endblock rel_author%}
 {% block facebook_sdk %}
