--- a/back-end/phyrosite/phyrosite/templates/home/contenido.html
+++ b/back-end/phyrosite/phyrosite/templates/home/contenido.html
@@ -1,1 +1,7 @@
 {% extends "home/footer.html" %}
+{% block contenido %}
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+{% endblock contenido %}
