--- a/back-end/phyrosite/phyrosite/templates/landing/home.html
+++ b/back-end/phyrosite/phyrosite/templates/landing/home.html
@@ -1,5 +1,6 @@
 {% extends "landing/base_analytics.html" %}
-{% block title %}{% block og_title %}Phyro Server{% endblock %}{% endblock %}
+{% block title %}{% block og_title %}Phyro Server | Agencia Creativo Digital
+{% endblock %}{% endblock %}
 {% block rel_canonical%}{% block og_url %}http://phyroserver.com{%endblock%}{%endblock%}
 {% block og_type%}website{%endblock%}
 {% block descripcion %}{% block og_descripcion %}Agencia de Desarrollo Web y Mkt Dígital. El lugar donde se desarrollan tus ideas: Creamos tu nueva tienda online, damos vida a tu proyecto digital o te ayudamos a cambiar al mundo con tu startup. {% endblock %} {% endblock %}
@@ -16,7 +17,7 @@
                 <span class="right"><a class="codrops-icon codrops-icon-drop" href="/team"><span>TEAM</span></a></span>
             </div>
             <header class="header">
-                <div class="bg-img"><img src="{{STATIC_URL}}landing/img/7.jpg" alt="Background Image"/></div>
+                <div class="bg-img"><img src="http://38.media.tumblr.com/2741d3e79ea3782f87c65c1e44b5f9fa/tumblr_na0kb0BLqR1st5lhmo1_1280.jpg"/></div>
                 <div class="title">
                     <nav class="codrops-demos">
                         <a class="current-demo" href="index.html">Home</a>
@@ -27,10 +28,10 @@
                         <a href="/startUp">StartUps</a>
                         <a href="/clientes">Clientes</a>
                     </nav>
-                    <h1>Phyro Server | Damos vida a tu idea</h1>
+                    <h1>El lugar donde se desarrollan tus ideas</h1>
                 </div>
             </header>
-            <button class="trigger" data-info="Click to see the header effect"><span>Trigger</span></button>
+            <button class="trigger" data-info="Estas son las herramientas con las que podemos darle vida a tu proyecto"><span>Trigger</span></button>
             <div class="title">
                 <nav class="codrops-demos">
                         <a class="current-demo" href="index.html">Home</a>
