--- a/front-end/landing/css/component.css
+++ b/front-end/landing/css/component.css
@@ -56,7 +56,7 @@ html, body, .container, .header {
 
 .title h1 {
 	padding: 0 0 0.2em;
-	color: #fff;
+	color:  #313131;
 	font-weight: 800;
 	font-size: 3.25em;
 	margin: 0 auto;
