--- a/back-end/phyrosite/phyrosite/templates/landing/home.html
+++ b/back-end/phyrosite/phyrosite/templates/landing/home.html
@@ -31,7 +31,7 @@
                     <h1>El lugar donde se desarrollan tus ideas</h1>
                 </div>
             </header>
-            <button class="trigger" data-info="Estas son las herramientas con las que podemos darle vida a tu proyecto"><span>Trigger</span></button>
+            <button class="trigger" data-info="Estas son las herramientas con las que podemos darle vida a tu <proyecto></proyecto>"><span>Trigger</span></button>
             <div class="title">
                 <nav class="codrops-demos">
                         <a class="current-demo" href="index.html">Home</a>
